@@ -1,5 +1,4 @@
 *** nearest release ***
-  ! move iconsets from UI to C++ code for uic<4.8 compatibility
   ! create empty metadata:
     * set non-empty fields Exif.Photo.DateTimeOriginal and Exif.Photo.DateTimeDigitized
   ! sessions:
