@@ -368,11 +368,6 @@
         <property name="text">
          <string>Convert &amp;All</string>
         </property>
-        <property name="icon">
-         <iconset theme="system-run">
-          <normaloff/>
-         </iconset>
-        </property>
         <property name="shortcut">
          <string>Alt+A</string>
         </property>
@@ -395,10 +390,6 @@
        <widget class="QPushButton" name="quitButton">
         <property name="text">
          <string>&amp;Quit</string>
-        </property>
-        <property name="icon">
-         <iconset theme="application-exit">
-          <normaloff>:/images/exit.png</normaloff>:/images/exit.png</iconset>
         </property>
        </widget>
       </item>
@@ -458,10 +449,6 @@
    <addaction name="menuAbout"/>
   </widget>
   <action name="actionExit">
-   <property name="icon">
-    <iconset theme="application-exit">
-     <normaloff>:/images/exit.png</normaloff>:/images/exit.png</iconset>
-   </property>
    <property name="text">
     <string>Quit</string>
    </property>
@@ -476,11 +463,6 @@
    </property>
   </action>
   <action name="actionOptions">
-   <property name="icon">
-    <iconset theme="preferences-desktop">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>&amp;Options</string>
    </property>
@@ -489,71 +471,36 @@
    </property>
   </action>
   <action name="actionAbout_Sir">
-   <property name="icon">
-    <iconset theme="help-about">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>About Sir...</string>
    </property>
   </action>
   <action name="actionAbout_Qt">
-   <property name="icon">
-    <iconset theme="help-about">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>About Qt...</string>
    </property>
   </action>
   <action name="actionAdd_File">
-   <property name="icon">
-    <iconset theme="list-add">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>Add &amp;File...</string>
    </property>
   </action>
   <action name="actionAdd_Dir">
-   <property name="icon">
-    <iconset theme="list-add">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>Add &amp;Dir...</string>
    </property>
   </action>
   <action name="actionCheckforUpdates">
-   <property name="icon">
-    <iconset theme="system-software-update">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>Check for updates...</string>
    </property>
   </action>
   <action name="actionSendInstall">
-   <property name="icon">
-    <iconset theme="network-transmit">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>Let us know that you are using SIR...</string>
    </property>
   </action>
   <action name="actionRemoveAll">
-   <property name="icon">
-    <iconset theme="edit-clear">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>Remove Al&amp;l</string>
    </property>
@@ -562,11 +509,6 @@
    </property>
   </action>
   <action name="actionSelect">
-   <property name="icon">
-    <iconset theme="edit-select-all">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>&amp;Select...</string>
    </property>
@@ -578,11 +520,6 @@
    </property>
   </action>
   <action name="actionImport_files">
-   <property name="icon">
-    <iconset theme="edit-find">
-     <normaloff/>
-    </iconset>
-   </property>
    <property name="text">
     <string>&amp;Import files...</string>
    </property>
