@@ -36,10 +36,6 @@
          <height>24</height>
         </size>
        </property>
-       <property name="icon">
-        <iconset theme="go-previous">
-         <normaloff>:/images/previous.png</normaloff>:/images/previous.png</iconset>
-       </property>
        <property name="flat">
         <bool>true</bool>
        </property>
@@ -58,10 +54,6 @@
          <width>24</width>
          <height>24</height>
         </size>
-       </property>
-       <property name="icon">
-        <iconset theme="go-next">
-         <normaloff>:/images/next.png</normaloff>:/images/next.png</iconset>
        </property>
        <property name="flat">
         <bool>true</bool>
@@ -1250,9 +1242,6 @@
        <property name="text">
         <string>Delete metadata</string>
        </property>
-       <property name="icon">
-        <iconset theme="edit-delete"/>
-       </property>
        <property name="autoDefault">
         <bool>false</bool>
        </property>
@@ -1276,9 +1265,6 @@
        <property name="text">
         <string>Save changes</string>
        </property>
-       <property name="icon">
-        <iconset theme="document-save"/>
-       </property>
        <property name="default">
         <bool>true</bool>
        </property>
@@ -1288,9 +1274,6 @@
       <widget class="QPushButton" name="cancelButton">
        <property name="text">
         <string>Cancel</string>
-       </property>
-       <property name="icon">
-        <iconset theme="cancel"/>
        </property>
       </widget>
      </item>
